# uferris-bsp

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/xiao-esp32-c3/: Cargo.toml  README.md
examples/xiao-esp32-c6/: Cargo.toml  README.md
examples/xiao-esp32-c6/.cargo/: config.toml
examples/xiao-nrf52840/: .gitignore  .gitigrone  Cargo.toml  memory.x
examples/xiao-nrf52840/uf2_files/base-board/: blinky.uf2  counter.uf2  light_meter.uf2
examples/xiao-nrf52840/uf2_files/power-board/: blinky.uf2  counter.uf2  current_monitor.uf2  light_meter.uf2  power_monitor.uf2  siren.uf2  voltage_monitor.uf2
src/: lib.rs  lib_bkp.rs  pins.rs
src/boards/: mod.rs  xiao_esp32c3.rs  xiao_esp32c6.rs  xiao_esp32s3.rs  xiao_nrf52840.rs
src/components/: button.rs  buzzer.rs  i2cdevices.rs  io_expander.rs  ldr.rs  led.rs  mod.rs  rtc.rs  spidevices.rs
src/devices/: mod.rs  xiaoesp32c3.rs
