[package]
name = "uferris-bsp"
version = "0.1.2"
edition = "2024"
description = "A Board Support Package for the uFerris Learner Board"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uFerris-rs/uferris-bsp"
keywords = ["embedded", "uferris", "xiao", "no_std"]
categories = ["embedded"]
readme = "README.md"
homepage = "https://theembeddedrustacean.com/"
exclude = ["target/debug/*", "assets/*"]

[features]
#! ⚠️ At least one Xiao device feature must be enabled when building the crate.

default = []
## Xiao ESP32-C3 Device Support
xiao-esp32c3 = [
    "esp-hal/esp32c3",
    "esp-rtos/esp32c3",
    "esp-rtos/embassy",
    "static_cell",
]
## uFerris Megalops Power Board Extension Support
power-board = []
## embassy Support Feature Flag
embassy = []


[dependencies]
esp-rtos = { version = "0.2.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
nb = "1.0.0"
bitmask-enum = "2.2.5"
ina219 = "0.2.0"
embedded-sdmmc = "0.9.0"
document-features = "0.2.11"
static_cell = { version = "2.1.1", optional = true }
# Device HALs
esp-hal = { version = "1.0.0", optional = true, features = ["unstable"] }


[package.metadata.docs.rs]
features = ["xiao-esp32c3"]
default-target = "riscv32imc-unknown-none-elf"
rustdoc-args = ["--cfg", "docsrs"]
