[package]
name = "uferris-bsp"
version = "0.1.3"
edition = "2024"
description = "A Board Support Package for the uFerris Learner Board"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uFerris-rs/uferris-bsp"
keywords = ["embedded", "uferris", "xiao", "no_std"]
categories = ["embedded"]
readme = "README.md"
homepage = "https://theembeddedrustacean.com/"
exclude = ["target/debug/*", "assets/*"]
autobenches = false
autotests = false
autobins = false

[features]
#! ⚠️ At least one Xiao device feature must be enabled when building the crate.

default = []
## Xiao ESP32-C3 Device Support
xiao-esp32c3 = [
    "esp-hal/esp32c3",
    "esp-rtos/esp-alloc",
    "esp-rtos/esp32c3",
    "esp-rtos/embassy",
    "static_cell",

]
## Xiao ESP32-C6 Device Support
xiao-esp32c6 = [
    "esp-hal/esp32c6",
    "esp-rtos/esp32c6",
    "esp-rtos/embassy",
    "static_cell",
    "portable-atomic/critical-section",
]

## Xiao ESP32-S3 Device Support
xiao-esp32s3 = [
    "esp-hal/esp32s3",
    "esp-rtos/esp32s3",
    "esp-rtos/embassy",
    "static_cell",
]

## Xiao NRF52840 Device Support
xiao-nrf52840 = [
    "embassy-nrf",
    "panic-halt",
    "static_cell",
    "cortex-m",
    "cortex-m-rt",
    "embassy-futures"
]

## uFerris Megalops Power Board Extension Support
power-board = []
## embassy Support Feature Flag
embassy = []


[dependencies]
cortex-m-rt = { version = "0.7.5", optional = true }
cortex-m = { version = "0.7.7", optional = true }
esp-rtos = { version = "0.3.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
nb = "1.0.0"
bitmask-enum = "2.2.5"
ina219 = "0.2.0"
embedded-sdmmc = "0.9.0"
document-features = "0.2.11"
static_cell = { version = "2.1.1", optional = true }
portable-atomic = { version = "1.13.1", optional = true }
panic-halt = { version = "1.0.0", optional = true }
embassy-futures = { version = "0.1.2", optional = true }
# Device HALs
esp-hal = { version = "~1.1", optional = true, features = ["unstable"] }
embassy-nrf = { version = "0.10.0", features = ["nrf52840", "time-driver-rtc1", "unstable-pac"], optional = true }


[package.metadata.docs.rs]
features = ["xiao-esp32c3"]
default-target = "riscv32imc-unknown-none-elf"
rustdoc-args = ["--cfg", "docsrs"]
